[gd_scene load_steps=7 format=2]

[ext_resource path="res://raw_assets/fonts/Terminal-Grotesque-master/terminal-grotesque.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/PlayerInventory/PlayerInventory.gd" type="Script" id=2]
[ext_resource path="res://raw_assets/themes/Inventory.tres" type="Theme" id=3]
[ext_resource path="res://raw_assets/images/items_icons/hoe_64.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )
RichTextLabel/colors/default_color = Color( 0.0784314, 0.0705882, 0.0705882, 1 )
RichTextLabel/colors/font_color_selected = Color( 0.49, 0.49, 0.49, 1 )

[node name="Control" type="Control"]
script = ExtResource( 2 )

[node name="ItemContainer" type="MarginContainer" parent="."]
margin_right = 75.0
margin_bottom = 75.0
rect_rotation = -0.185077
theme = ExtResource( 3 )

[node name="Slots" type="HBoxContainer" parent="ItemContainer"]
margin_right = 75.0
margin_bottom = 75.0
size_flags_horizontal = 3

[node name="Sprite_DraggedItem" type="Sprite" parent="ItemContainer"]

[node name="PopupPanel_ItemMenu" type="PopupPanel" parent="."]
visible = true
margin_right = 147.0
margin_bottom = 120.0
theme = ExtResource( 3 )

[node name="V" type="VBoxContainer" parent="PopupPanel_ItemMenu"]
margin_left = 1.0
margin_top = 1.0
margin_right = 146.0
margin_bottom = 119.0
size_flags_vertical = 0

[node name="H_Desc" type="HBoxContainer" parent="PopupPanel_ItemMenu/V"]
margin_right = 145.0
margin_bottom = 64.0
size_flags_vertical = 3

[node name="TextureRect_Icon" type="TextureRect" parent="PopupPanel_ItemMenu/V/H_Desc"]
margin_right = 19.0
margin_bottom = 64.0
texture = ExtResource( 4 )

[node name="RichTextLabel_ItemInfo" type="RichTextLabel" parent="PopupPanel_ItemMenu/V/H_Desc"]
margin_left = 23.0
margin_right = 145.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 2 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false

[node name="H_Buttons" type="HBoxContainer" parent="PopupPanel_ItemMenu/V"]
margin_top = 98.0
margin_right = 145.0
margin_bottom = 118.0
size_flags_vertical = 10
alignment = 2

[node name="Button_SellItem" type="Button" parent="PopupPanel_ItemMenu/V/H_Buttons"]
margin_left = 35.0
margin_right = 70.0
margin_bottom = 20.0
size_flags_horizontal = 10
text = "Sell"

[node name="Button_DeleteItem" type="Button" parent="PopupPanel_ItemMenu/V/H_Buttons"]
margin_left = 90.0
margin_right = 145.0
margin_bottom = 20.0
size_flags_horizontal = 10
text = "Delete"
